<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    android:background = "@color/colorMain"
    tools:context = ".MainInfo">
    
    <TextView
        android:id = "@+id/headInfo"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/headInfo"
        android:textSize = "@dimen/_20ssp"
        android:textColor = "@color/colorTextWhite"
        android:background = "@color/colorHeadInfo"
        android:padding = "@dimen/_5sdp"
        android:gravity = "center"
        android:layout_weight = "0" />
    
    <fragment
        android:name = "com.example.myapplication_movieslist.fragments.FragmentInfoOne"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:id = "@+id/info_fragment_1"
        android:layout_weight = "1"
        android:layout_marginBottom = "@dimen/_10sdp"
        tools:layout = "@layout/info_fragment_1"/>
    
    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:orientation = "horizontal"
        android:layout_gravity = "center"
        android:gravity = "center"
        android:padding = "@dimen/_5sdp"
        android:layout_weight = "0">
        
        <Button
            android:id = "@+id/buttonUpdate"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/buttonUpdate"
            android:textSize = "@dimen/_15ssp"
            android:textColor = "@color/colorTextWhite"
            android:background = "@color/colorButtonUpdate"
            android:gravity = "center"
            android:layout_gravity = "center"
            android:padding = "@dimen/_10sdp"
            android:layout_marginBottom = "@dimen/_5sdp"/>
        
        <Button
            android:id = "@+id/buttonDelete"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/buttonDelete"
            android:textSize = "@dimen/_15ssp"
            android:textColor = "@color/colorTextWhite"
            android:background = "@color/colorButtonDelete"
            android:gravity = "center"
            android:layout_gravity = "center"
            android:padding = "@dimen/_10sdp"
            android:layout_marginBottom = "@dimen/_5sdp"
            android:layout_marginLeft = "@dimen/_10sdp"/>
        
        <Button
            android:id = "@+id/buttonBack"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/buttonBack"
            android:textSize = "@dimen/_15ssp"
            android:textColor = "@color/colorTextWhite"
            android:background = "@color/colorButtonBack"
            android:gravity = "center"
            android:layout_gravity = "center"
            android:padding = "@dimen/_10sdp"
            android:layout_marginBottom = "@dimen/_5sdp"
            android:layout_marginLeft = "@dimen/_10sdp"/>
        
    </LinearLayout>
    
</LinearLayout>