<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    android:background = "@color/colorMain"
    tools:context = ".Main">
	
    <TextView
        android:id = "@+id/headMain"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/headMain"
        android:textSize = "@dimen/_20ssp"
        android:textColor = "@color/colorTextWhite"
        android:background = "@color/colorHeadMain"
        android:padding = "@dimen/_5sdp"
        android:gravity = "center"
        android:layout_weight = "0"/>
    
    <ListView
        android:id = "@+id/listMovie"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:padding = "@dimen/_5sdp"
        android:layout_weight = "1"
        android:layout_marginBottom = "@dimen/_10sdp"/>
    
    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:orientation = "horizontal"
        android:layout_gravity = "center"
        android:gravity = "center"
        android:padding = "@dimen/_5sdp"
        android:layout_weight = "0">
        
        <Button
            android:id = "@+id/buttonAdd"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/buttonAdd"
            android:textSize = "@dimen/_18ssp"
            android:textColor = "@color/colorTextWhite"
            android:background = "@color/colorButtonAdd"
            android:gravity = "center"
            android:layout_gravity = "center"
            android:padding = "@dimen/_10sdp"
            android:layout_marginBottom = "@dimen/_5sdp"/>
        
        <Button
            android:id = "@+id/buttonDelete"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/buttonDelete"
            android:textSize = "@dimen/_18ssp"
            android:textColor = "@color/colorTextWhite"
            android:background = "@color/colorButtonDelete"
            android:gravity = "center"
            android:layout_gravity = "center"
            android:padding = "@dimen/_10sdp"
            android:layout_marginBottom = "@dimen/_5sdp"
            android:layout_marginLeft = "@dimen/_20sdp"/>
        
    </LinearLayout>

</LinearLayout>